force-app/main/default/objects/Interaction_Note__c.object
<CustomObject>
    <description>Notes related to an Interaction.</description>
    <label>Interaction Note</label>
    <nameField>
        <displayFormat>IN-{0000000}</displayFormat>
        <label>Interaction Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Interaction Notes</relationshipLabel>
        <relationshipName>Interaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>